# stack-sentinel

./: README.md  pyproject.toml
src/stack_sentinel/: __init__.py
src/stack_sentinel/mcp/: __init__.py  server.py
src/stack_sentinel/mcp_server/: server.py
src/stack_sentinel/mock/: __init__.py  api.py
tests/: conftest.py  test_tool.py
