[project]
name = "stack-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stack_sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
